analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/valKeywordOnVarargFunctionValueParameter.kt
// KT-72730

fun foo(vararg val para<caret>meter) {}
